--- a/agendamento.html
+++ b/agendamento.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novo Agendamento - Sistema NAP</title>
+    <link rel="icon" href="logo.png" type="image/png">
     <style>
         /* ===== TEMA ESCOLA - SANTO ANTÔNIO ===== */
         :root {
@@ -1151,4 +1152,5 @@
 </script>
 </body>
 </html>
+
 
