--- a/agendamento.html
+++ b/agendamento.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novo Agendamento - Sistema NAP</title>
-    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href=""logo.png">
     <style>
         /* ===== TEMA ESCOLA - SANTO ANTÔNIO ===== */
         :root {
@@ -1152,5 +1154,6 @@
 </script>
 </body>
 </html>
+
 
 
