--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Sistema de Agendamento NAP</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href=""logo.png">
     <style>
         /* ===== TEMA ESCOLA - SANTO ANTÔNIO ===== */
         :root {
@@ -521,4 +524,5 @@
     </script>
 </body>
 </html>
+
 
