--- a/AdaptaProva.html
+++ b/AdaptaProva.html
@@ -581,25 +581,30 @@
                         <span class="menu-text">Início</span>
                         <span class="menu-tooltip">Página inicial</span>
                     </li>
+                    <li class="menu-item" data-menu="2">
+                        <span class="menu-icon">📅</span>
+                        <span class="menu-text">Agendar</span>
+                        <span class="menu-tooltip">Novo agendamento</span>
+                    </li>
+                    <li class="menu-item" data-menu="3">
+                        <span class="menu-icon">✉️</span>
+                        <span class="menu-text">Suporte</span>
+                        <span class="menu-tooltip">Contato e suporte</span>
+                    </li>
+                    <li class="menu-item active" data-menu="4">
+                        <span class="menu-icon">📆</span>
+                        <span class="menu-text">Calendário</span>
+                        <span class="menu-tooltip">Visualizar calendário</span>
+                    </li>
+                    <li class="menu-item" data-menu="5">
+                        <span class="menu-icon">🔍</span>
+                        <span class="menu-text">Buscar</span>
+                        <span class="menu-tooltip">Busca por alunos</span>
+                    </li>
                     <li class="menu-item active" data-menu="2">
                         <span class="menu-icon">📝</span>
                         <span class="menu-text">Adaptar</span>
                         <span class="menu-tooltip">Adaptar prova</span>
-                    </li>
-                    <li class="menu-item" data-menu="3">
-                        <span class="menu-icon">📚</span>
-                        <span class="menu-text">Histórico</span>
-                        <span class="menu-tooltip">Histórico de adaptações</span>
-                    </li>
-                    <li class="menu-item" data-menu="4">
-                        <span class="menu-icon">👥</span>
-                        <span class="menu-text">Alunos</span>
-                        <span class="menu-tooltip">Gerenciar alunos</span>
-                    </li>
-                    <li class="menu-item" data-menu="5">
-                        <span class="menu-icon">⚙️</span>
-                        <span class="menu-text">Config.</span>
-                        <span class="menu-tooltip">Configurações</span>
                     </li>
                 </ul>
             </nav>
