--- a/suporte.html
+++ b/suporte.html
@@ -599,6 +599,11 @@
                         <span class="menu-text">Buscar</span>
                         <span class="menu-tooltip">Busca por alunos</span>
                     </li>
+                    <li class="menu-item" data-menu="6">
+                        <span class="menu-icon">📝</span>
+                        <span class="menu-text">Adaptar</span>
+                        <span class="menu-tooltip">Adaptar prova</span>
+                    </li>
                 </ul>
             </nav>
 
@@ -817,6 +822,9 @@
                     case '5':
                         window.location.href = BASE_URL + '/busca.html';
                         break;
+                    case '6':
+                        window.location.href = BASE_URL + '/AdaptaProva.html';
+                        break;
                 }
             });
         });
@@ -825,6 +833,7 @@
 </body>
 
 </html>
+
 
 
 
