--- a/dashboard.html
+++ b/dashboard.html
@@ -424,6 +424,11 @@
                         <span class="menu-text">Buscar</span>
                         <span class="menu-tooltip">Busca por alunos</span>
                     </li>
+                    <li class="mobile-menu-item active" data-menu="6">
+                        <span class="mobile-menu-icon">📝</span>
+                        <span class="mobile-menu-text">Adaptar</span>
+                        <span class="menu-tooltip">Adaptar prova</span>
+                </li>
                 </ul>
             </nav>
 
@@ -513,6 +518,9 @@
                     case 5: // Busca
                         window.location.href = BASE_URL + '/busca.html';
                         break;
+                    case 6: 
+                        window.location.href = BASE_URL + '/AdaptaProva.html';
+                        break;
                 }
             }
         }
@@ -524,6 +532,7 @@
     </script>
 </body>
 </html>
+
 
 
 
