--- a/calendario.html
+++ b/calendario.html
@@ -857,6 +857,10 @@
                     <span class="mobile-menu-icon">🔍</span>
                     <span class="mobile-menu-text">Buscar</span>
                 </li>
+                <li class="mobile-menu-item" data-menu="6">
+                    <span class="mobile-menu-icon">📝</span>
+                    <span class="mobile-menu-text">Adaptar</span>
+                </li>
             </ul>
         </nav>
 
@@ -889,6 +893,11 @@
                         <span class="menu-icon">🔍</span>
                         <span class="menu-text">Buscar</span>
                         <span class="menu-tooltip">Busca por alunos</span>
+                    </li>
+                    <li class="menu-item active" data-menu="6">
+                        <span class="menu-icon">📝</span>
+                        <span class="menu-text">Adaptar</span>
+                        <span class="menu-tooltip">Adaptar prova</span>
                     </li>
                 </ul>
             </nav>
@@ -1204,6 +1213,9 @@
                         break;
                     case 5:
                         window.location.href = BASE_URL + '/busca.html';
+                        break;
+                    case 6: 
+                        window.location.href = BASE_URL + '/AdaptaProva.html';
                         break;
                 }
             }
@@ -1597,4 +1609,5 @@
     </script>
 </body>
 </html>
+
 
