--- a/agendamento.html
+++ b/agendamento.html
@@ -645,6 +645,11 @@
                         <span class="menu-text">Buscar</span>
                         <span class="menu-tooltip">Busca por alunos</span>
                     </li>
+                    <li class="menu-item" data-menu="6">
+                        <span class="menu-icon">📝</span>
+                        <span class="menu-text">Adaptar</span>
+                        <span class="menu-tooltip">Adaptar prova</span>
+                    </li>
                 </ul>
             </nav>
 
@@ -1023,6 +1028,9 @@
                         break;
                     case 5:
                         window.location.href = BASE_URL + '/busca.html';
+                        break;
+                    case 6:
+                        window.location.href = BASE_URL + '/AdaptaProva.html';
                         break;
                 }
             }
@@ -1648,5 +1656,6 @@
     </script>
 </body>
 </html>
+
 
 
