--- a/dashboard.html
+++ b/dashboard.html
@@ -424,7 +424,7 @@
                         <span class="menu-text">Buscar</span>
                         <span class="menu-tooltip">Busca por alunos</span>
                     </li>
-                    <li class="mobile-menu-item active" data-menu="6">
+                    <li class="mobile-menu-item" data-menu="6">
                         <span class="mobile-menu-icon">📝</span>
                         <span class="mobile-menu-text">Adaptar</span>
                         <span class="menu-tooltip">Adaptar prova</span>
@@ -532,6 +532,7 @@
     </script>
 </body>
 </html>
+
 
 
 
