--- a/dashboard.html
+++ b/dashboard.html
@@ -424,9 +424,9 @@
                         <span class="menu-text">Buscar</span>
                         <span class="menu-tooltip">Busca por alunos</span>
                     </li>
-                    <li class="mobile-menu-item" data-menu="6">
-                        <span class="mobile-menu-icon">📝</span>
-                        <span class="mobile-menu-text">Adaptar</span>
+                    <li class="menu-item" data-menu="6">
+                        <span class="menu-icon">📝</span>
+                        <span class="menu-text">Adaptar</span>
                         <span class="menu-tooltip">Adaptar prova</span>
                 </li>
                 </ul>
@@ -532,6 +532,7 @@
     </script>
 </body>
 </html>
+
 
 
 
