--- a/busca.html
+++ b/busca.html
@@ -949,7 +949,7 @@
                     case 5: // Busca (já estamos aqui)
                         break;
                     case 6: 
-                        window.location.href = BASE_URL + '/AdaptaProva.html;
+                        window.location.href = BASE_URL + '/AdaptaProva.html';
                         break;
                 }
             }
@@ -1466,4 +1466,5 @@
     </script>
 </body>
 </html>
+
 
