--- a/calendario.html
+++ b/calendario.html
@@ -894,7 +894,7 @@
                         <span class="menu-text">Buscar</span>
                         <span class="menu-tooltip">Busca por alunos</span>
                     </li>
-                    <li class="menu-item active" data-menu="6">
+                    <li class="menu-item" data-menu="6">
                         <span class="menu-icon">📝</span>
                         <span class="menu-text">Adaptar</span>
                         <span class="menu-tooltip">Adaptar prova</span>
@@ -1609,5 +1609,6 @@
     </script>
 </body>
 </html>
+
 
 
