--- a/AdaptaProva.html
+++ b/AdaptaProva.html
@@ -59,7 +59,7 @@
             z-index: 2;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
             padding: 0 30px;
             height: 100%;
         }
