--- a/AdaptaProva.html
+++ b/AdaptaProva.html
@@ -439,8 +439,12 @@
             transition: all 0.3s ease;
             background: var(--branco);
             position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 200px; 
         }
-
         .file-upload-area:hover {
             border-color: var(--laranja);
             background: rgba(255, 107, 53, 0.05);
@@ -489,7 +493,12 @@
             cursor: pointer;
             margin-left: 10px;
         }
-
+        /* Botão de seleção de arquivo centralizado */
+        #selectFileBtn {
+            margin: 15px 0;
+            width: auto;
+            min-width: 200px;
+        }
         /* ===== BOTÕES ESTILO ESCOLA ===== */
         .btn-escola {
             background: linear-gradient(135deg, var(--laranja) 0%, var(--dourado) 100%);
